manifests/test/kubernetes-dashboard/kubernetes-dashboard_gateway.networking.k8s.io_v1_gateway_kubernetes-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.55
  listeners:
  - hostname: k8s.10.5.0.55.nip.io
    name: kubernetes-dashboard
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: kubernetes-dashboard-gateway-tls
      mode: Terminate
