manifests/test/kubernetes-dashboard/kubernetes-dashboard_gateway.networking.k8s.io_v1_httproute_kubernetes-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  hostnames:
  - k8s.10.5.0.55.nip.io
  parentRefs:
  - name: kubernetes-dashboard
  rules:
  - backendRefs:
    - name: kubernetes-dashboard-auth
      port: 8000
    matches:
    - path:
        value: /api/v1/login
    - path:
        value: /api/v1/csrftoken/login
    - path:
        value: /api/v1/me
  - backendRefs:
    - name: kubernetes-dashboard-api
      port: 8000
    matches:
    - path:
        value: /api
    - path:
        value: /metrics
  - backendRefs:
    - name: kubernetes-dashboard-web
      port: 8000
    matches:
    - path:
        value: /
