manifests/test/kubernetes-dashboard/kubernetes-dashboard_gateway.networking.k8s.io_v1alpha3_backendtlspolicy_keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: keycloak
  namespace: kubernetes-dashboard
spec:
  targetRefs:
  - group: gateway.envoyproxy.io
    kind: Backend
    name: keycloak
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: kubernetes-dashboard-cluster-ca
    hostname: auth.10.5.0.54.nip.io
