manifests/test/kubernetes-dashboard/kubernetes-dashboard_v1_service_kubernetes-dashboard-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
    app.kubernetes.io/part-of: kubernetes-dashboard
  name: kubernetes-dashboard-api
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: api
    port: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
    app.kubernetes.io/part-of: kubernetes-dashboard
  type: ClusterIP
